[project]
name = "llm-wiki-core"
version = "0.1.0"
description = "Minimal Streamlit proof of concept for the LLM Wiki pattern."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "networkx>=3.4.2",
    "openai>=1.59.0",
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "python-dotenv>=1.0.1",
    "python-pptx>=1.0.2",
    "pyvis>=0.3.2",
    "streamlit>=1.41.0",
]

[project.scripts]
llm-wiki-core = "llm_wiki_core.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/llm_wiki_core"]
